--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
                     </li>
                     <!-- SEGUIR INTRODUCIOENDO COSAS A MEDIDA QUE VAYAMOS AVANZANDO-->
                     <li class="timeline-inverted">
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/moon_1.png" alt="..." /></div>
+                        <div class="timeline-panel">
+                            <div class="timeline-heading">
+                                <h4>Diciembre 2024</h4>
+                                <h4 class="subheading">Publicación de Project Paintball</h4>
+                            </div>
+                            <div class="timeline-body"><p class="text-muted">Este es el resultado de 4 meses de duro trabajo</p></div>
+                        </div>
+                    </li>
+                    <li class="timeline-inverted">
                         <div class="timeline-image">
                             <h4>
                                 ¡Gracias
