--- a/index.html
+++ b/index.html
@@ -275,9 +275,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Fernando.jpg" alt="..." />
                             <h4>Fernando Sánchez</h4>
                             <p class="text-muted">Diseño 3D de entornos y programación de mecánicas</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Twitter Profile"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Larry Parker LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sirenejota?igsh=MWh4MTQ3emZ3MDJ2cQ==" aria-label="Parveen Anand Facebook Profile"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
